<resources>
    <string name="app_name">CalculadoraAndroid</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>
    <string name="dica1">Insira o primeiro número</string>
    <string name="dica2">Insira o segundo número</string>
    <string name="limpar">Limpar</string>
    <string name="raiz">√</string>
    <string name="soma">+</string>
    <string name="sub">-</string>
    <string name="multiplicacao">×</string>
    <string name="div">÷</string>
</resources>