<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/icon"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/tv_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="30dp" />


    <EditText
        android:id="@+id/et_n1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/dica1"
        android:inputType="number"/>

    <EditText
        android:id="@+id/et_n2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/dica2"
        android:inputType="number"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:text="@string/soma"
            android:backgroundTint="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:onClick="somar"/>

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:text="@string/sub"
            android:backgroundTint="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:onClick="subtrair"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:text="@string/multiplicacao"
            android:backgroundTint="@color/black"
            android:layout_marginLeft="10dp"
            android:onClick="multiplicar"/>

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:text="@string/div"
            android:backgroundTint="@color/black"
            android:layout_marginLeft="10dp"
            android:onClick="dividir"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:text="@string/raiz"
            android:backgroundTint="@color/black"
            android:layout_marginLeft="10dp"
            android:onClick="radiciacao"/>

    </LinearLayout>


    <Button
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/limpar"
        android:backgroundTint="@color/black"
        android:onClick="limpar"/>


</LinearLayout>